--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "^5.0.0"
+    "react-scripts": "^5.0.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "stylelint": "^16.12.0",
+    "stylelint-config-standard": "^36.0.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
